# pyjobshop_biomanufacturing

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  benchmark_instance.py  config.json  pyproject.toml  submit.py  summarize.py
.github/workflows/: CI.yml
problem_instances/: problem_data_o10_s1.json  problem_data_o10_s10.json  problem_data_o10_s2.json  problem_data_o10_s21.json  problem_data_o10_s22.json  problem_data_o10_s23.json  problem_data_o10_s24.json  problem_data_o10_s25.json  problem_data_o10_s26.json  problem_data_o10_s27.json  problem_data_o10_s28.json  problem_data_o10_s29.json  problem_data_o10_s3.json  problem_data_o10_s30.json  problem_data_o10_s32.json  problem_data_o10_s33.json  problem_data_o10_s34.json  problem_data_o10_s35.json  problem_data_o10_s36.json  problem_data_o10_s37.json  problem_data_o10_s38.json  problem_data_o10_s39.json  problem_data_o10_s4.json  problem_data_o10_s40.json  problem_data_o10_s41.json  problem_data_o10_s5.json  problem_data_o10_s6.json  problem_data_o10_s7.json  problem_data_o10_s8.json  problem_data_o10_s9.json  problem_data_o20_s1.json  problem_data_o20_s10.json  problem_data_o20_s2.json  problem_data_o20_s21.json  problem_data_o20_s22.json  problem_data_o20_s23.json  problem_data_o20_s24.json  problem_data_o20_s25.json  problem_data_o20_s26.json  problem_data_o20_s27.json  (+60 more)
src/: memory.py  parse.py  plotting.py  warmstart.py
summaries/summary_test_1768918915/: config.json  summary_problem_data__TL30.0_Scpoptimizer_WTrue_5324385acd8f46b0818191064b28d136.csv
tests/: test_parse_instance.py
