[project]
name = "SeclinPyJobShop"
version = "0.1.0"
description = "CP model of the Seclin UPROD site"
authors = [
    { name = "Kim van den Houten", email = "K.C.vandenhouten@tudelft.nl"},
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.0.0",
    "seaborn>=0.13.2",
    "tomli>=2.0.1",
    "docplex>=2.25.236",
    "scipy>=1.13.1",
    "pytest>=8.2.2",
    "pyjobshop>=0.0.8",
    "openpyxl>=3.0.0",
    "tabulate",
    "jinja2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "codecov>=2.1.13",
    "pre-commit>=3.8.0",
    "ruff>=0.12.4",
]
[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["setuptools>=75.8.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 140

[tool.ruff]
line-length = 140
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E741",  # ambiguous variable name, needed for indexing
    "C901",  # too complex
    "B905",  # allow zip without strict for conciseness
]

[tool.ruff.lint.isort]
known-first-party = ["src", "tests", "parsing", "factory_data"]
known-third-party = ["pyjobshop"]
